# warden

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  SECURITY.md  ca_profile.xml  config.example.yaml  docker-compose.yml  pyproject.toml
.gitea/workflows/: docker.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-17-rangarr-aio-hardening.md
docs/superpowers/specs/: 2026-05-17-rangarr-aio-hardening-design.md
extras/decypharr/: README.md  enable.sh  heartbeat.sh  janitor.sh
templates/: warden.xml
tests/: test_cleanup_resilience.py  test_core.py  test_tag_limits.py  test_version.py
warden/: __init__.py  cleaner.py  config.py  main.py  searcher.py  validators.py
warden/clients/: __init__.py  arr.py
