[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warden"
version = "0.4.0"
description = "Unified Warden + Killarr all-in-one service for automating media searches and stalled download cleanup across Radarr, Sonarr, and Lidarr."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18",
    "pytest>=9.0",
    "ruff>=0.15",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
warden = "warden.main:run"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
